--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -10,7 +10,7 @@
         <body>
             <h1>Your password is:</h1>
             <h2 class="alert alert-success">{{ password }}</h2>
-            <a href="{% url 'home' %}" class="btn btn-primary">home</a>
+            <a href="{% url 'home' %}" class="btn btn-info">home</a>
         </body>
     </div>
 </html>
